Changed images and labels

--- a/app.css
+++ b/app.css
@@ -13,8 +13,8 @@
   
   ---------------------------------------------------------------------- */
   :root {
-      --color-lightest: #ffcdcd;
-      --color-light: #ee6c6c;
+      --color-lightest: #ff0000;
+      --color-light: #1c0707;
       --color: #EC6565;
       --color-dark: #ca4e4e;
       --font: "Open Sans", Helvetica, sans-serif;
