Added new links, changed CSS code color

--- a/app.css
+++ b/app.css
@@ -13,7 +13,7 @@
   
   ---------------------------------------------------------------------- */
   :root {
-      --color-lightest: #1eceff;
+      --color-lightest: #124c5c;
       --color-light: #1c0707;
       --color: #7e7fde;
       --color-dark: #4eb5ca;
