Changed CSS Font Color

--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@
   ---------------------------------------------------------------------- */
   :root {
       --color-lightest: #124c5c;
-      --color-light: #1c0707;
+      --color-light: #ffffff;
       --color: #7e7fde;
       --color-dark: #4eb5ca;
       --font: "Open Sans", Helvetica, sans-serif;
