Added Small Changes

--- a/app.css
+++ b/app.css
@@ -13,7 +13,7 @@
   
   ---------------------------------------------------------------------- */
   :root {
-      --color-lightest: #124c5c;
+      --color-lightest: #3a6470;
       --color-light: #ffffff;
       --color: #7e7fde;
       --color-dark: #4eb5ca;
